day3/manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apdev-ingress
  namespace: apdev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: apdev-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "3"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/waf-acl-id: waf_arn
    alb.ingress.kubernetes.io/actions.targets: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"employee-service-","servicePort":8080,"weight":50},{"serviceName":"employee-service-","servicePort":8080,"weight":50}]
    alb.ingress.kubernetes.io/actions.response-404: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/employee
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
          - path: /v1/token
            pathType: Prefix
            backend:
              service:
                name: token-service
                port:
                  number: 8080
          - path: /healthcheck
            pathType: ImplementationSpecific
            backend:
              service:
                name: targets
                port:
                  name: use-healthcheck
  defaultBackend:
    service:
      name: response-404
      port:
        name: use-annotation
